examples/error-codes/undefined/UB-EIO2-bad.output
Error: UB-EIO2
Description: Trying to write outside the bounds of an object.
Type: Undefined behavior.
See also: C11 sec. 6.5.6:8, J.2:1 items 47, 49
  at main(UB-EIO2-bad.c:6)
